--- a/ECommerceSample/ECommerceSample.csproj
+++ b/ECommerceSample/ECommerceSample.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Account\**" />
+    <Content Remove="Areas\Account\**" />
+    <EmbeddedResource Remove="Areas\Account\**" />
+    <None Remove="Areas\Account\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
